refactored some more things